--- a/themes/firsttheme/css/style.css
+++ b/themes/firsttheme/css/style.css
@@ -48,6 +48,7 @@ body {
 
 .title, .logo {
     padding: 3em 3em 3em 0;
+    max-width: 200px;
 }
 
 @media (max-width: 767px) {
@@ -58,7 +59,7 @@ body {
         min-width: 50%;
     }
     .logo {
-        max-width: 30%;
+        max-width: 200px;
     }
 }
 
