--- a/themes/kmom02/scss/typography.scss
+++ b/themes/kmom02/scss/typography.scss
@@ -2,3 +2,8 @@ body {
     line-height:1.4;
     font-family: "Montserrat", sans-serif;
 }
+
+p {
+    font-size: 1em;
+    margin-bottom: 1.96rem;
+}
