--- a/themes/kmom02/scss/typography.scss
+++ b/themes/kmom02/scss/typography.scss
@@ -1,9 +1,9 @@
 body {
-    line-height:1.4;
-    font-family: "Montserrat", sans-serif;
+  line-height: 1.4;
+  font-family: 'Montserrat', sans-serif;
 }
 
 p {
-    font-size: 1em;
-    margin-bottom: 1.96rem;
+  font-size: 1em;
+  margin-bottom: 1.96rem;
 }
