--- a/themes/kmom02/scss/container.scss
+++ b/themes/kmom02/scss/container.scss
@@ -1,30 +1,31 @@
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-    display: grid;
-    grid-template-columns: [first] 20% [second] auto [third] 20% [end];
-    grid-template-rows: [row1-start] auto [row2-start] auto [row3-start] auto [row-end];
+  display: grid;
+  grid-template-columns: [first] 20% [second] auto [third] 20% [end];
+  grid-template-rows: [row1-start] auto [row2-start] auto [row3-start] auto [row-end];
 }
 
 .main {
-    background-color: antiquewhite;
-    width: 100%;
-    padding: 2rem;
-    margin: 0 auto; //centrerar containern
-    max-width: 66rem;
+  background-color: #faebd7;
+  width: 100%;
+  padding: 2rem;
+  margin: 0 auto; //centrerar containern
+  max-width: 66rem;
 }
 
 .main {
-    grid-column: second / third; //börjar på second slutar på third
-    grid-row: row2-start / row3-start;
+  grid-column: second / third; //börjar på second slutar på third
+  grid-row: row2-start / row3-start;
 }
 
 /* .main {
-    flex: 1 0 auto;
+  flex: 1 0 auto;
 }
 
 .header, .footer {
-    flex: 0 0 auto;
+  flex: 0 0 auto;
 } */
