--- a/themes/kmom02/scss/container.scss
+++ b/themes/kmom02/scss/container.scss
@@ -10,7 +10,7 @@ body {
 }
 
 .main {
-  background-color: #faebd7;
+  //background-color: #faebd7;
   width: 100%;
   padding: 2rem;
   margin: 0 auto; //centrerar containern
