--- a/themes/kmom02/scss/footer.scss
+++ b/themes/kmom02/scss/footer.scss
@@ -3,7 +3,7 @@
   flex-direction: row; //horisontellt
   justify-content: space-between; //flyter ut elementen åt sidorna.
   align-items: center; //vertikalled */
-  background-color: #ffb6c1;
+  background-color: $footer-color;
   padding: 2rem;
 
 
