--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,5 +1,17 @@
 $font-color: #000;
 $font-alternative-color: #fff;
-$accent-color: #ee6c4d;
+/* $accent-color: #ee6c4d;
 $background-color: #3d5a80;
-$background-alternative-color: #e0fbfc;
+$background-alternative-color: #e0fbfc; */
+
+//Från genomgång kmom04:
+
+$main-background-color: #fff;
+$main-font-color: #000;
+//$footer-color: #ffb6c1 ;
+$footer-color: #e6acbb;
+$accent-color: #663844;
+$background-alternative-color: #698791;
+//$background-alternative-color: green;
+
+$headercolor: #e3f9e8;
