--- a/themes/kmom02/scss/mobile-menu.scss
+++ b/themes/kmom02/scss/mobile-menu.scss
@@ -14,10 +14,10 @@
   padding: 0 1em;
 }
 
-.nav a,
+/* .nav a,
 .nav-toggle {
-  color: #333;
-}
+  color: $nav-color;
+} */
 
 .nav-toggle {
   display: none;
