--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -6,7 +6,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import '../../shared/fontawesome/scss/regular';
 
 @import '../../node_modules/normalize.css/normalize';
-@import 'variables';
+@import 'variables-dark';
 
 @import 'typography';
 
@@ -21,7 +21,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'technology';
 
 body {
-  background-color: $background-alternative-color;
+  background-color: $background-color;
 }
 
 * {
@@ -33,5 +33,17 @@ body {
 }
 
 code {
-  color: $background-alternative-color;
+  color: $font-alternative-color;
 }
+
+.nav a,
+.nav-toggle {
+  color: $nav-color;
+}
+
+img {
+  filter: hue-rotate(20deg);
+}
+
+
+
