Added analysis of loading time to meet requirements in kmom05

--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -19,6 +19,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'mobile-menu'; //gjort själv.. hoppas rätt.
 
 @import 'technology';
+@import 'gallery';
 
 body {
   background-color: $background-color;
@@ -44,6 +45,8 @@ code {
 img {
   filter: hue-rotate(20deg);
 }
+
+
 
 
 
