--- a/themes/kmom02/scss/container.scss
+++ b/themes/kmom02/scss/container.scss
@@ -6,7 +6,7 @@ body {
 body {
   display: grid;
   grid-template-columns: [first] 20% [second] auto [third] 20% [end];
-  grid-template-rows: [row1-start] auto [row2-start] auto [row3-start] auto [row-end];
+  grid-template-rows: [row1-start] 25% [row2-start] auto [row3-start] 20% [row-end];
 }
 
 .main {
