--- a/themes/kmom02/scss/gallery.scss
+++ b/themes/kmom02/scss/gallery.scss
@@ -2,99 +2,99 @@ img,
 embed,
 object,
 video {
-    max-width: 100%; //Bilden är max 100% av förälderelementet.
-    max-height: 100%;
+  max-width: 100%; //Bilden är max 100% av förälderelementet.
+  max-height: 100%;
 }
 
 .gallery { //gallery är förälder till alla pics.
-    display: grid;
-    gap: 4% 4%;
-    margin-bottom: 1.96rem;
-    grid-template-columns: [first] 31% [second] 30% [third] 31% [end];
-    grid-template-rows: [row1-start] auto [row2-start] auto [row-end];
-    box-sizing: border-box;
-    //justify-self: center;
+  display: grid;
+  gap: 4%;
+  margin-bottom: 1.96rem;
+  grid-template-columns: [first] 31% [second] 30% [third] 31% [end];
+  grid-template-rows: [row1-start] auto [row2-start] auto [row-end];
+  box-sizing: border-box;
+  //justify-self: center;
 }
 
 .pic1 {
-    grid-column: first / second;
-    grid-row: row1-start / row2-start;
-    //max-width: 327px; 
+  grid-column: first / second;
+  grid-row: row1-start / row2-start;
+  //max-width: 327px; 
   //border: 1px solid #ffa07a;
   //padding: 1.96rem;
 }
 
 .pic2 {
-    grid-column: second / third;
-    grid-row: row1-start / row2-start;
-    //border: 1px solid #ffa07a;
-    //padding: 1.96rem;
+  grid-column: second / third;
+  grid-row: row1-start / row2-start;
+  //border: 1px solid #ffa07a;
+  //padding: 1.96rem;
 }
 
 .pic3 {
-    grid-column: third / end;
-    grid-row: row1-start / row2-start;
-    //border: 1px solid #ffa07a;
-    //padding: 1.96rem;
+  grid-column: third / end;
+  grid-row: row1-start / row2-start;
+  //border: 1px solid #ffa07a;
+  //padding: 1.96rem;
 }
 
 .pic4 {
-    grid-column: first / second;
-    grid-row: row2-start / row-end;
-    //border: 1px solid #ffa07a;
-    //padding: 1.96rem;
+  grid-column: first / second;
+  grid-row: row2-start / row-end;
+  //border: 1px solid #ffa07a;
+  //padding: 1.96rem;
 }
 
 
 @media (max-width: 941px) {
-    .gallery {
-        grid-template-columns: [first] 82% [second];
-        grid-template-rows: repeat (10,1fr);
-    }
+  .gallery {
+    grid-template-columns: [first] 82% [second];
+    grid-template-rows: repeat (10,1fr);
+  }
     
-    .pic1 {
-        grid-column: first / second;
-        grid-row: 1 / 2;
-        border: 1px solid rgb(255, 160, 122);
-        //padding: 1.96rem;
-    }
+  .pic1 {
+    grid-column: first / second;
+    grid-row: 1 / 2;
+    border: 1px solid rgb(255, 160, 122);
+    //padding: 1.96rem;
+  }
     
-    .pic2 {
-        grid-column: first / second;
-        grid-row: 2 / 3;
-        border: 1px solid rgb(255, 160, 122);
-        //padding: 1.96rem;
-    }
+  .pic2 {
+    grid-column: first / second;
+    grid-row: 2 / 3;
+    border: 1px solid rgb(255, 160, 122);
+    //padding: 1.96rem;
+  }
     
-    .pic3 {
-        grid-column: first / second;
-        grid-row: 3 / 4;
-        border: 1px solid rgb(255, 160, 122);
-        //padding: 1.96rem;
-    }
+  .pic3 {
+    grid-column: first / second;
+    grid-row: 3 / 4;
+    border: 1px solid rgb(255, 160, 122);
+    //padding: 1.96rem;
+  }
     
-    .pic4 {
-        grid-column: first / second;
-        grid-row: 4 / 5;
-        border: 1px solid rgb(255, 160, 122);
-        //padding: 1.96rem;
-    }
+  .pic4 {
+    grid-column: first / second;
+    grid-row: 4 / 5;
+    border: 1px solid rgb(255, 160, 122);
+    //padding: 1.96rem;
+  }
 }
 
 .embed-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .embed-container iframe,
 .embed-container object,
 .embed-container embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
