--- a/themes/kmom02/scss/mobile-menu.scss
+++ b/themes/kmom02/scss/mobile-menu.scss
@@ -2,7 +2,7 @@
   overflow-y: hidden !important;
   transition: height 0.5s ease-in !important;
 }
-
+/* 
 .nav ul {
   display: flex;
   justify-content: flex-end;
@@ -14,14 +14,14 @@
   padding: 0 1em;
 }
 
-/* .nav a,
+.nav a,
 .nav-toggle {
   color: $nav-color;
-} */
+}
 
 .nav-toggle {
   display: none;
-}
+} */
 
 @media (max-width: 767px) {
   .header {
